chore: use spec reporter for cleaner test output
Adds --test-reporter=spec to test scripts for hierarchical output
with pass/fail summary at the end instead of verbose TAP format.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "spindb",
-  "version": "0.31.1",
+  "version": "0.31.2",
   "author": "Bob Bass <bob@bbass.co>",
   "license": "PolyForm-Noncommercial-1.0.0",
   "description": "Zero-config Docker-free local database containers. Create, backup, and clone a variety of popular databases.",
@@ -13,9 +13,9 @@
     "dev": "tsx --env-file-if-exists=.env cli/bin.ts",
     "test": "run-s test:all",
     "test:engine": "tsx scripts/test-engine.ts",
-    "test:unit": "node --import tsx --test --experimental-test-isolation=none tests/unit/*.test.ts",
-    "test:cli": "node --import tsx --test --experimental-test-isolation=none tests/integration/cli-e2e.test.ts",
-    "test:hostdb-sync": "node --import tsx --test --experimental-test-isolation=none tests/integration/hostdb-sync.test.ts",
+    "test:unit": "node --import tsx --test --test-reporter=spec --experimental-test-isolation=none tests/unit/*.test.ts",
+    "test:cli": "node --import tsx --test --test-reporter=spec --experimental-test-isolation=none tests/integration/cli-e2e.test.ts",
+    "test:hostdb-sync": "node --import tsx --test --test-reporter=spec --experimental-test-isolation=none tests/integration/hostdb-sync.test.ts",
     "test:integration": "tsx scripts/test-engine.ts",
     "test:all": "run-s test:unit test:integration",
     "test:local": "./scripts/test-local.sh",
